--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     table {border-collapse: collapse !important;}
                 </style>
         <![endif]-->
-        <!-- Outlook image background in 72 PPI -->
+        <!-- Outlook image background in 72 DPI -->
         <!--[if mso]>
             <noscript>
             <xml>
